logs/Slang/generated/hdlconv/hdlconvertor_p753_1.sv.log
name: hdlconvertor_p753_1
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_1.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_1.sv:4:13: error: identifier 'SIZE' used before its declaration
    output [SIZE-1:0] bin;
            ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_1.sv:2:15: note: declared here
    parameter SIZE = 8;
              ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_1.sv:5:12: error: identifier 'SIZE' used before its declaration
    input [SIZE-1:0] gray;
           ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2012/p753_1.sv:2:15: note: declared here
    parameter SIZE = 8;
              ^
